// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense total message for 1 item 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totaling 
    $1.23
  </h3>
</div>
`;

exports[`Should render expense total message for 2 item 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
     totaling 
    $1,231,231.23
  </h3>
</div>
`;
